--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.17.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.6.1",
+    "framer-motion": "^12.9.4",
     "isbot": "^5.1.27",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.5.3",
+    "react-spotify-web-playback": "^0.14.7"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
