--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview",
+    "build:static": "react-router export",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "@chakra-ui/react": "^3.17.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "date-fns": "^4.1.0",
@@ -23,17 +25,21 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
     "react-spotify-web-playback": "^0.14.7"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "tailwindcss": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
+    "vite": "^6.3.4",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
