--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.17.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.10.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
@@ -19,13 +19,14 @@
     "@react-router/serve": "^7.5.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^10.18.0",
+    "glob": "^11.0.2",
     "isbot": "^5.1.27",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "^6.20.1",
     "react-spotify-web-playback": "^0.14.7"
   },
   "devDependencies": {
