--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-# Dependencies
 node_modules
-.pnp
-.pnp.js
-
-# Testing
-coverage
-
-# Production
-build
 dist
 dist-ssr
 *.local
-
-# Environment variables
 .env
-.env.local
-.env.*.local
-
-# Logs
+.env.*
+!.env.example
 logs
 *.log
 npm-debug.log*
@@ -25,8 +12,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -36,8 +21,3 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-# Firebase
-.firebase/
-firebase-debug.log
-firebase-debug.*.log
