--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
   "name": "vibe-loop",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "deploy": "firebase deploy"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "axios": "^1.9.0",
     "firebase": "^10.8.0",
-    "framer-motion": "^11.0.3",
     "lucide-react": "^0.344.0",
-=======
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.17.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
-    "@react-router/node": "^7.5.3",
-    "@react-router/serve": "^7.5.3",
-    "date-fns": "^4.1.0",
-    "firebase": "^11.6.1",
-    "framer-motion": "^12.9.4",
-    "isbot": "^5.1.27",
->>>>>>> cfbb9d0c8e039888d6419c953a3d5572bb3d41c8
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -41,9 +27,12 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "firebase-tools": "^13.4.1",
+    "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
 }
