--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
-    "firebase": "^10.8.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "firebase": "^10.14.1",
+    "framer-motion": "^12.10.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
