--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,19 @@
 {
   "hosting": {
+    "site": "vibe-loop-b6f4c",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "**",
