--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "color-thief-browser": "^2.0.2",
     "firebase": "^10.14.1",
     "framer-motion": "^12.10.1",
     "fuse.js": "^6.6.2",
