--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "canvas-recorder": "^1.8.0",
     "color-thief-browser": "^2.0.2",
     "firebase": "^10.14.1",
     "framer-motion": "^12.10.1",
     "fuse.js": "^6.6.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
+    "wavesurfer.js": "^7.9.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
