added a category page and removed community.tsx and othe useless files and made run on a new mac env

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "vibe-loop-b6f4c",
+    "site": "vibe-loop-b6f4c", // Your actual site ID
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "headers": [
