--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@hookform/resolvers": "^5.0.1",
     "canvas-recorder": "^1.8.0",
     "color-thief-browser": "^2.0.2",
     "firebase": "^10.14.1",
@@ -26,14 +27,20 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
+    "uuid": "^11.1.0",
     "wavesurfer.js": "^7.9.5",
+    "zod": "^3.25.32",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
