--- a/dataconnect/dataconnect.yaml
+++ b/dataconnect/dataconnect.yaml
@@ -1,5 +1,5 @@
 specVersion: "v1"
-serviceId: "vibeloop"
+serviceId: "vibe-loop"
 location: "us-central1"
 schema:
   source: "./schema"
@@ -7,6 +7,6 @@ schema:
     postgresql:
       database: "fdcdb"
       cloudSql:
-        instanceId: "vibeloop-fdc"
+        instanceId: "vibe-loop-fdc"
       # schemaValidation: "COMPATIBLE"
 connectorDirs: ["./connector"]
