--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vibe-loop-functions",
-  "version": "1.0.0",
-  "description": "Cloud Functions for Vibe-Loop",
-  "main": "lib/index.js",
+  "name": "functions",
   "scripts": {
+    "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
+    "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
@@ -12,15 +11,21 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": "22"
   },
+  "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "firebase-functions-test": "^3.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.7.3"
   },
   "private": true
 }
