--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -87,7 +87,7 @@ port = 54324
 
 [storage]
 enabled = true
-# The maximum file size allowed (e.g. "5MB", "500KB").
+# The maximum file size allowed (50MB)
 file_size_limit = "50MiB"
 
 # Image transformation API is available to Supabase Pro plan.
@@ -95,11 +95,11 @@ file_size_limit = "50MiB"
 # enabled = true
 
 # Uncomment to configure local storage buckets
-# [storage.buckets.images]
-# public = false
+# [storage.buckets.media]
+# public = true
 # file_size_limit = "50MiB"
-# allowed_mime_types = ["image/png", "image/jpeg"]
-# objects_path = "./images"
+# allowed_mime_types = ["audio/mpeg", "video/mp4"]
+# objects_path = "./media"
 
 [auth]
 enabled = true
