--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.39.3",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "zustand": "^4.5.2"
