--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
+# Dependencies
 node_modules
-dist
-dist-ssr
-*.local
-.env
-.env.*
-.env.example
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
+# Build outputs
+dist
+dist-ssr
+*.local
+
+# Environment variables
+.env
+.env.local
+
+# Logs
+logs
+*.log
+
+# IDE and editor files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?.env
+*.sw?
+
+# OS generated files
+.DS_Store
+Thumbs.db
+.env*.local
