--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.839.0",
+    "@aws-sdk/s3-request-presigner": "^3.839.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/formidable": "^3.4.5",
+    "@vercel/node": "^5.3.0",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
