--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.839.0",
     "@aws-sdk/s3-request-presigner": "^3.839.0",
+    "@clerk/clerk-react": "^5.32.2",
     "@supabase/supabase-js": "^2.50.2",
     "@types/formidable": "^3.4.5",
     "@vercel/node": "^5.3.0",
