--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@vercel/node": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.17.0",
     "multer": "^2.0.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
