--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-server": "node dev-server.js",
+    "start-dev": "node start-dev.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -19,6 +21,7 @@
     "@vercel/node": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
+    "express": "^5.1.0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.17.0",
