--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.840.0",
     "@aws-sdk/s3-request-presigner": "^3.840.0",
+    "@clerk/nextjs": "^6.23.2",
+    "@frontegg/nextjs": "^9.2.7",
     "@frontegg/react": "^7.10.3",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -48,7 +50,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^14.2.16",
+    "next": "^14.2.30",
     "next-themes": "latest",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
@@ -61,6 +63,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "vercel": "^44.2.8",
     "zod": "^3.24.1"
   },
   "devDependencies": {
