--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,13 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "app/api/songs/route.ts": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
+    "NEXT_PUBLIC_MAX_FILE_SIZE": "20971520"
+  }
 }
